# MetaExtract

./: .gitignore  CLAUDE.md  LICENSE  PLAN.md  README.md  codebook.sav  extract.py  pyproject.toml
sample_files/: fake_data.sav  sources.md
src/metaextract/: __init__.py  cli.py  output.py  readers.py  stats.py  utils.py
tests/: conftest.py  test_cli.py  test_output.py  test_readers.py  test_stats.py  test_utils.py
tests/data/: sample.csv  sample.tsv  sample_no_header.csv
