[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "metaextract"
version = "0.1.0"
description = "CLI metadata extraction tool for SPSS, SAS, Stata, CSV, Excel, and Parquet files"
license = {file = "LICENSE"}
requires-python = ">=3.12"
dependencies = [
    "rich-click",
    "pandas>=2.0",
    "pyreadstat",
    "openpyxl",
    "xlrd",
    "pyarrow",
    "numpy",
]

[project.scripts]
metaextract = "metaextract.cli:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]

[tool.hatch.build.targets.wheel]
packages = ["src/metaextract"]

[tool.pytest.ini_options]
addopts = "--cov=src/metaextract --cov-report=term-missing"

[tool.coverage.run]
source = ["src/metaextract"]
omit = []

[tool.coverage.report]
show_missing = true
skip_covered = false
